<resources>
    <string name="app_name">s184210Galgeleg</string>
    <string name="start_spil">Start spil</string>
    <string name="high_score">High Score</string>
    <string name="gameTextView1">Velkommen til min galgeleg</string>
    <string name="letterValue">Indtast 1 bogstav</string>
    <string name="playButton">Spil</string>
    <string name="gameTextView2"></string>
    <string name="gameTextView3"></string>
    <string name="hangmanpicture">hangmanPicture</string>
    <string name="finishText"></string>
    <string name="high_scores">High Scores</string>
    <string name="highScoreRank">Rank</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
</resources>